Fix responsive menu overlapping and update paragraph content

--- a/style.css
+++ b/style.css
@@ -103,14 +103,13 @@ body {
 .home-content p {
     position: relative;
     font-size: 16px;
-    margin: 20px 0 40px;
-    max-width: 50%;
+    margin: 10px 0 10px;
+    max-width: 100%;
 }
 
 .home-content img {
     width: 50px;
 }
-
 
 .btn-box a {
     display: inline-flex;
@@ -127,6 +126,7 @@ body {
     font-weight: 600;
     letter-spacing: 1px;
     transition: 0.5s;
+    margin-top: 50px;
 }
 
 /* .btn-box a:hover,
@@ -243,7 +243,7 @@ body {
         display: flex;
         visibility: visible;
         opacity: 1;
-        height: 200px;
+        height: 160px;
     }
 
 
